<resources>
    <string name="app_name">Guess1A2B_APP</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="start_fragment_label">Second Fragment</string>
    <string name="guess_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="start">start</string>
    <string name="guess">guess</string>
    <string name="score">Score: %d</string>
    <string name="attempt">Attempts: %d</string>
    <string name="stage_count">Stage： %d / %d </string>
    <string name="stage">Stage： %d  </string>
    <string name="answer">Ans： %s  </string>
    <string name="tries">Tries： %d  </string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="test">test</string>
    <string name="nextGame">next Game</string>
    <string name="history">history</string>
    <string name="home">home</string>
    <string name="game">game: %d</string>
    <string name="record">record: %d</string>
    <string name="input">input: %s</string>
    <string name="result">result: %s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>